[package]
name = "wide_libretro"
version = "0.0.1"
edition = "2021"

[dependencies]
egui = "0.19.0"
egui_skia = { path = "../egui_skia" }
libloading = "0.7.3"
log = "0.4"
once_cell = "1.10.0"
parking_lot = "0.12.0"
pretty_env_logger = "0.4"
skia-safe = { version = "0.53", features = [] }

egui_demo_lib = "0.19.0"

[lib]
crate-type = ["cdylib"]
