[package]
name = "wide_libretro"
version = "0.0.1"
edition = "2021"

[dependencies]
egui = "0.21"
egui_skia = { version = "0.3", features = ["cpu_fix"] }
libloading = "0.7.3"
log = "0.4"
once_cell = "1.10.0"
parking_lot = "0.12.0"
pretty_env_logger = "0.4"
skia-safe = { version = "0.53", features = [] }
zerocopy = "0.6.1"

egui_demo_lib = "0.21"

rustboyadvance-ppu-standalone = { git = "https://github.com/daniel5151/rustboyadvance-ppu-standalone.git" }

[lib]
crate-type = ["cdylib"]

# [patch."https://github.com/daniel5151/rustboyadvance-ppu-standalone.git"]
# rustboyadvance-ppu-standalone = { path = "../rustyboyadvance-ppu-standalone"  }
